--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -18,7 +18,11 @@ timezone: Asia/Taipei
 <!-- Content_START -->
 
 ### 2024.09.23
-
+1. 學習了如何使用remixIDE，以及compile到deploy的流程
+2. 值變量裡面比較特別的是address有分成單純的address跟address payable 兩種
+3. 宣告函式需要使用可見性 以及狀態修飾符，狀態修飾符有一個特別的payable代表這是一個能給合約收錢的function
+4. 可見性中 private跟internal的差異是在於繼承的合約能不能使用
+5. 宣告返回值前面記得要加上returns; 命名式返回跟解構式賦值都是新學到的語法
 
 
 ### 
