--- a/cxk228922.md
+++ b/cxk228922.md
@@ -60,7 +60,7 @@ contract HelloWeb3{
 function <functionName>(<Type> <ParameterName>) <visibility> <modifier> returns (<Type>) 
 ```
 
-`<Type> <parameter1>` : Input parameter,e.g. `int a`
+`<Type> <parameter1>` : Input parameter,e.g. `int a`<br>
     &nbsp;&nbsp;&nbsp;&nbsp; Also,you can input more than 1 parameter
     
 `<modifier>` : 
