Add note 101 lesson 5

--- a/content/JakeDu/02.md
+++ b/content/JakeDu/02.md
@@ -36,3 +36,44 @@
    - 访问 block， tx， msg 中任意成员 （除 msg.sig 和 msg.data 之外）。
    - 调用任何未标记为 pure 的函数。
    - 使用包含某些操作码的内联汇编。
+
+### 第五课 变量数据存储和作用域
+#### 数据位置
+   > 每个引用类型都有一个额外的属性，即 "数据位置"， 关于它的存储位置。有三个数据位置。 memory, storage 和 calldata。引用类型包括结构、数组和映射。值类型的变量被使用时，会得到一个独立的副本。
+   - memory： 其寿命限于外部函数调用， 数据内容可修改。
+   - storage： 存储状态变量的位置，其寿命限于合约的寿命。函数里的参数和临时变量一般用memory
+   - calldata 包含函数参数的特殊数据位置，数据不可修改。使用calldata可以避免复制， 也可以确保数据不能被修改。
+
+#### 数据位置的赋值规则
+- 在 storage 和 memory 之间的分配（或从 calldata 中分配） 总是创建一个独立的拷贝。
+
+- 从 memory 到 memory 的赋值只创建引用。 这意味着对一个内存变量的改变在所有其他引用相同数据的内存变量中也是可见的。
+
+- 从 storage 到 local 存储变量的赋值也只赋值一个引用。
+
+- 所有其他对 storage 的赋值总是拷贝的。 这种情况的例子是对状态变量或存储结构类型的局部变量成员的赋值， 即使局部变量本身也是一个引用。
+
+#### 全局变量
+全局变量是全局范围工作的变量，都是solidity预留关键字。他们可以在函数内不声明直接使用
+常见的全局变量有：
+
+时间单位
+```
+   1 == 1 seconds
+
+   1 minutes == 60 seconds
+
+   1 hours == 60 minutes
+
+   1 days == 24 hours
+
+   1 weeks == 7 days
+```
+以太坊单位
+```
+   1 wei == 1
+   1 gwei == 1e9
+   1 ether == 1e18
+```
+
+[更多](https://docs.soliditylang.org/zh/v0.8.22/units-and-global-variables.html)
