--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -23,8 +23,10 @@ timezone: Asia/Taipei
 3. 宣告函式需要使用可見性 以及狀態修飾符，狀態修飾符有一個特別的payable代表這是一個能給合約收錢的function
 4. 可見性中 private跟internal的差異是在於繼承的合約能不能使用
 5. 宣告返回值前面記得要加上returns; 命名式返回跟解構式賦值都是新學到的語法
-
-
+### 2024.09.24
+今天沒有到solidity101上學東西，主要是完成了一份課堂上的作業，比較有收穫的是完成了一個 reentrancy attack的流程，我覺得收穫蠻多的具體了解了調用閃電貸的流程用solidity操作了一遍
+，然後學到用calldata以及solidity撰寫讓設計不完善的閃電貸項目轉移token權限 搞了很久一部分，最後答案也沒幾行，感覺是對語法不太熟悉導致對原理有誤解，進而有太多奇怪的想法 
+明天開始繼續基礎學習solidity101
 ### 
 
 <!-- Content_END -->
