--- a/content/CraigC/04.md
+++ b/content/CraigC/04.md
@@ -20,7 +20,7 @@ function ReturnsNamed() public pure returns(uint256 _num, bool _bool, uint256[3]
         _array = [uint256(2),1,0];
     }
 ```
-return也依然可以使用
+return在命名式返回中也依然可以使用
 ```solidity
 function ReturnNamed() public pure returns(uint256 _num1, bool _bool1, uint256[3] memory _array1){
         return(19, false, [uint256(9),8,7]);
