Add content solidity 101 less 6 - 9

--- a/content/JakeDu/03.md
+++ b/content/JakeDu/03.md
@@ -47,3 +47,58 @@
    ```
 
    注意：结构体不可能包含其自身类型的成员，尽管结构本身可以是映射成员的值类型， 或者可以包含其本身类型的动态大小的数组。
+
+### 第7课 映射类型 mapping
+
+> Solidity中存储键值对的数据结构，可以理解为哈希表。
+声明映射的格式为mapping(_KeyType => _ValueType)，其中_KeyType和_ValueType分别是Key和Value的变量类型。
+#### mapping规则
+   - 映射的_KeyType只能选择Solidity内置的值类型,不能用自定义的结构体。
+   - 不能用于public函数的参数或返回结果中，因为mapping记录的是一种关系 (key - value pair)。
+   - 如果映射声明为public，那么Solidity会自动给你创建一个getter函数，可以通过Key来查询对应的Value。
+   - 给映射新增的键值对的语法为_Var[_Key] = _Value，其中_Var是映射变量名，_Key和_Value对应新增的键值对。
+   ```
+      function writeMap (uint _Key, address _Value) public{
+         idToAddress[_Key] = _Value;
+      }
+   ```
+#### mapping特点
+   - 映射不储存任何键（Key）的资讯，也没有length。
+   - 映射使用keccak256(abi.encode(key, slot))当成offset存取value，其中slot是映射变量定义所在的插槽位置。
+   - 因为Ethereum会定义所有未使用的空间为0，所以未赋值（Value）的键（Key）初始值都是各个type的默认值，如uint的默认值是0。
+
+### 第8课 变量初始值
+> 在Solidity中，声明但没赋值的变量都有它的初始值或默认值。
+#### 值类型初始化变量：
+   - boolean: false
+   - string: ""
+   - int: 0
+   - uint: 0
+   - enum: 枚举中的第一个元素的值
+   - address: 0x0000000000000000000000000000000000000000 (或 address(0))
+   - function
+      - internal: 空白函数
+      - external: 空白函数
+
+#### 引用类型初始化变量:
+   - 映射mapping: 所有元素都为其默认值的mapping
+   - 结构体struct: 所有成员设为其默认值的结构体
+   - 数组array
+      - 动态数组: []
+      - 静态数组（定长）: 所有成员设为其默认值的静态数组
+
+#### delete 
+   delete会把一个变量的值设置为初始值
+   ```
+      bool public _bool2 = true; 
+      function d() external {
+         delete _bool2; // delete 会让_bool2变为默认值，false
+      } 
+   ```
+
+### 第9课 常数 constant和immutable
+> 我们介绍Solidity中和常量相关的两个关键字，constant（常量）和immutable（不变量）。状态变量声明这两个关键字之后，不能在初始化后更改数值。这样做的好处是提升合约的安全性并节省gas。
+
+   注意: **只有数值变量可以声明constant和immutable；string和bytes可以声明为constant，但不能为immutable。**
+   - constant变量必须在声明的时候初始化。
+   - immutable变量可以在声明时或构造函数中初始化若，immutable变量既在声明时初始化，又在constructor中初始化，会使用constructor初始化的值。
