feat: update day3 note

--- a/content/llt/102.md
+++ b/content/llt/102.md
@@ -44,3 +44,32 @@ pure和view关键字可能令人费解，因為其他程式语言中没有类似
 - 调用任何未标记 `view` 或 `pure` 的函数。
 - 使用低级调用（low-level calls）。
 - 使用包含某些操作码的内联汇编。
+
+#### 返回值：return 和 returns
+
+- `returns`：跟在函数名后面，用于声明返回的变量类型及变量名。
+- `return`：用于函数主体中，返回指定的变量。
+
+#### 命名式返回
+
+```
+// 命名式返回
+function returnNamed() public pure returns(uint256 _number, bool _bool, uint256[3] memory _array){
+    _number = 2;
+    _bool = false;
+    _array = [uint256(3),2,1];
+}
+
+// 命名式返回，依然支持return
+function returnNamed2() public pure returns(uint256 _number, bool _bool, uint256[3] memory _array){
+    return(1, true, [uint256(1),2,5]);
+}
+```
+
+#### 解构式赋值
+
+- 解构赋值用`,`隔开，按顺序排列，不读取的留空。
+
+```
+(, _bool2, ) = returnNamed();
+```
