--- a/cxk228922.md
+++ b/cxk228922.md
@@ -150,7 +150,63 @@ mapping(address => uint) public balances;
 <name>[<key>] = <Value>;
 balances[msg.sender] = 100;
 ```
+### 2024.09.25
 
+1. constant/immutable
+
+| Characteristic      | `constant`                                 | `immutable`                                                       |
+| ------------------- | ------------------------------------------ | ----------------------------------------------------------------- |
+| Initialization time | declaration                                | constructor/declaration                                           |
+| Modification time   | Compile-time constant                      | Determined at deployment                                          |
+| Storage location    | Inlined directly at compile-time           | storage                                                           |
+| Use cases           | completely fixed values (e.g. fixed rates) | values determined by conditions at deployment time (e.g.deployer) |
+
+
+2. Control flow<br>
+as same as C
+```solidity=
+//if-else
+function ifElseTest(uint256 _number) public pure returns(bool){
+    if(_number == 0){
+        return(true);
+    }else{
+        return(false);
+    }
+}
+//for loop
+function forLoopTest() public pure returns(uint256){
+    uint sum = 0;
+    for(uint i = 0; i < 10; i++){
+        sum += i;
+    }
+    return(sum);
+}
+//while
+function doWhileTest() public pure returns(uint256){
+    uint sum = 0;
+    uint i = 0;
+    do{
+        sum += i;
+        i++;
+    }while(i < 10);
+    return(sum);
+}
+//Insertion Sort
+function insertionSort(uint[] memory a) public pure returns(uint[] memory) {
+    for (uint i = 1;i < a.length;i++){
+        uint temp = a[i];
+        //uint j=i-1;
+        uint j=i;    //uint can't <0
+        while( (j >= 1) && (temp < a[j-1])){    
+        //before:(temp < a[j])
+            a[j] = a[j-1];
+            j--;
+        }
+        a[j] = temp;
+    }
+    return(a);
+}
+```
 
     
     
