--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -27,7 +27,13 @@ timezone: Asia/Taipei
 今天沒有到solidity101上學東西，主要是完成了一份課堂上的作業，比較有收穫的是完成了一個 reentrancy attack的流程，我覺得收穫蠻多的具體了解了調用閃電貸的流程用solidity操作了一遍
 ，然後學到用calldata以及solidity撰寫讓設計不完善的閃電貸項目轉移token權限 搞了很久一部分，最後答案也沒幾行，感覺是對語法不太熟悉導致對原理有誤解，進而有太多奇怪的想法 
 明天開始繼續基礎學習solidity101
-### 
+### 2024.09.25
+
+1.對結構的初始化都要再函示裡面
+2.初始化struct 的四種方法，第一種用storage來創造一個引用然後對她初始化，第二種直接引入在外面的函數變量，第三種跟第四種很像，差別是第四種用了一種叫做key value的方法
+3.在mapping的結構裡面 不能使用struct來mapping,mapping沒有定義初值的話她會默認是各個型別的初始值，初始化mapping的時候都是storage也就是狀態變量
+4.變量初值的部分bool默認是false其他都蠻正常的，delete可以讓變量變成初始值
+5.immutable  constant都不能在初始化後改變值 差別在於 immutable可以在constructor裡面在初始化邊量比較靈活 另外能聲明成immutable的只有數值變量，像是byte string這種的不行
 
 <!-- Content_END -->
 
