--- a/content/CraigC/05.md
+++ b/content/CraigC/05.md
@@ -40,7 +40,7 @@ contract cStroage{
 其他情况下，赋值创建的是本体的副本，即对二者之一的修改，并不会同步到另一方
 ##### 不同存储位置的赋值行为
 1. storage-storage:两者共享同一份数据,修改其一变量会影响另一变量
-2. memory-memory:两者是不同的拷贝,互相独立,修改一个不会影响另一个
+2. memory-memory:赋值按照引用传递,指向同一内存区域,修改其一会影响另一个.
 3. storage-memory:这会创建一份新的拷贝.memory和storage的变量相互独立
 4. memory-storage:会将memory的变量写入storage,修改一个的变量不会影响对方.
 
