--- a/cxk228922.md
+++ b/cxk228922.md
@@ -208,6 +208,71 @@ function insertionSort(uint[] memory a) public pure returns(uint[] memory) {
 }
 ```
 
+       
+### 2024.09.27
+1. constructor		
+If variables is dynamic dicision **when deploy**,we can use `constructor` to assign
+(similar as `decorator`)
+```solidity=
+address owner; 
+constructor(address initialOwner) {
+    owner = initialOwner; 
+}
+```
+2. modifier
+use to modify the behavior of function
+```solidity=
+address public owner;
+bool public paused;
+
+constructor() {
+	owner = msg.sender;
+	paused = false;
+}
+
+modifier onlyOwner() {
+	require(msg.sender == owner, "Not authorized");
+	_;//continue to run function
+}
+
+modifier whenNotPaused() {
+	require(!paused, "Contract is paused");
+	_;
+}
+
+function setPause(bool _paused) public onlyOwner {
+	paused = _paused;
+}
+
+function changeOwner(address newOwner) public onlyOwner whenNotPaused {
+	owner = newOwner;
+}
+```
+3. event
+When event be triggered,it will be recorded in log
+
+```solidity=
+event Transfer(address indexed from, address indexed to, uint256 value);
+
+function transfer(address _to, uint256 _value) public {
+    emit Transfer(msg.sender, _to, _value);    //trigger event
+}
+```
+4. override
+OverWrite the parent function
+```solidity=
+contract Parent {
+    function foo() public virtual {
+    }
+}
+
+contract Child is Parent {
+    function foo() public override {
+        //...
+    }
+}
+```
+
     
     
 
