--- a/content/Haoder/md/102.md
+++ b/content/Haoder/md/102.md
@@ -62,7 +62,7 @@
    **A:** bool a = 1 - 1 == 0 && 1 % 2 == 1
 
 > [!TIP]
-> ![img1](../img/102/img1.png)
+> ![102/img1](../img/102/img1.png)
 
 <!--
  ___     ___     ____      ___      _     _     _
