update 105.md practice

--- a/content/Haoder/md/105.md
+++ b/content/Haoder/md/105.md
@@ -131,19 +131,34 @@ Solidity 中不存在小數點，以 `0` 代替小數點，來確保交易的精
 
 ## 題目練習
 
-1. **Q: 問題？**  
+1. **Q: 引用類型(Reference Type)包含以下？**  
+   **A:** array、struct、mapping
+
+2. **Q: Solidity数据存储位置的类型不包含以下？**  
+   **A:** stack
+
+3. **Q: 合约中状态变量默认的存储位置类型为以下的？**  
+   **A:** storage
+
+4. **Q: 不同类型的引用变量相互赋值时，修改其中一个的值，不会导致另一个的值随之改变的是以下哪种情况：？**  
+   **A:** 合約中的 storage 賦值給本地的 memory
+
+5. **Q: Solidity中变量按作用域划分，可分为？**  
+   **A:** 狀態 state、局部 local、全局 global
+
+6. **Q: 消耗gas最多的变量类型为？**  
+   **A:** 狀態變量
+
+7. **Q: 下列表示“请求发起地址”的为？**  
+   **A:** msg.sender
+
+8. **Q: 下列表示“当前区块的矿工地址”的为？**  
+   **A:** block.coinbase
+
+9. **Q: 問題？**  
    **A:** 回答
 
-2. **Q: 問題？**  
-   **A:** 回答
-
-3. **Q: 問題？**  
-   **A:** 回答
-
-4. **Q: 問題？**  
-   **A:** 回答
-
-5. **Q: 問題？**  
+10. **Q: 問題？**  
    **A:** 回答
 
 <!--
