--- a/whw2025.md
+++ b/whw2025.md
@@ -380,4 +380,56 @@ function balances(address _addr) public view returns (uint256) {
 
 ###
 
+### 2024.09.28
+
+第八节变量初始值
+
+声明但未赋值的变量的初始值（也叫默认值）
+
+1、值类型初始值
+
+1）bool 类型的默认值为 false
+2）字符串 (string)的默认值：""（空字符串）
+3）所有整型变量（包括有符号整数 int 和无符号整数 uint）的默认值都是 0。
+4）enum 类型的默认值是枚举中第一个定义的元素。这是因为 Solidity 默认将枚举类型映射为从 0 开始的整数，第一个枚举项的值为 0。如果一个枚举变量在声明时没有被赋值，它会自动取枚举中第一个元素的值，这个值在内部被表示为 0。
+
+示例：
+enum Color { Red, Green, Blue }  // 定义一个枚举类型
+Color myColor;                 // 声明一个未赋值的枚举变量，默认值为 Color.Red
+
+5）address 类型的默认值是 0x0000000000000000000000000000000000000000，也就是“零地址”或空地址。
+6）对于 internal 、external类型的函数，未初始化时其值为“空白函数”，意味着没有任何实现或指向。
+
+2、引用类型初始值​
+1）映射mapping: 所有元素都为其默认值的mapping
+
+对于 mapping 类型，所有键都默认映射到其值类型的默认值。也就是说，如果你通过某个键来查询映射，但从未对该键赋过值，它会返回值类型的默认值。
+
+示例：
+mapping(uint => address) 中，如果你查询某个 uint 键但未赋值，它会返回默认地址 0x0000000000000000000000000000000000000000。
+
+2）结构体struct: 所有成员设为其默认值的结构体
+结构体是由不同类型的数据组合成的复合数据类型。每个成员变量都有其各自的默认值。
+示例：
+struct Student {
+    uint age;
+    string name;
+}
+Student public student;  // 未初始化的结构体，age 默认为 0，name 默认为 ""
+
+3）数组array
+动态数组: [ ]
+静态数组（定长）: 所有成员设为其默认值的静态数组
+
+delete操作符：用于将某个变量的值重置为其默认值。
+
+第九节变量（需重点重学）
+
+1、constant（常量）和immutable（不变量）。状态变量声明这两个关键字之后，不能在初始化后更改数值。这样做的好处是提升合约的安全性并节省gas。
+2、只有数值变量可以声明constant和immutable；string和bytes可以声明为constant，但不能为immutable。
+3、constant变量必须在声明的时候初始化，之后再也不能改变。
+4、constant 变量通常用于那些值在合约执行过程中不会改变的场景。
+5、immutable 变量和 constant 变量，它们的值在合约部署时就必须被确定，并且之后不能修改；
+
+###
 <!-- Content_END -->
