--- a/content/Haoder/md/107.md
+++ b/content/Haoder/md/107.md
@@ -8,3 +8,164 @@
 ## 隨筆
 
 ## 題目練習
+
+<!--
+ ____  _      _       ____       _ _    _     _     _
+|  _ \(_) ___| | __  |  _ \ ___ | | |  | |   | |   | |
+| |_) | |/ __| |/ /  | |_) / _ \| | |  | |   | |   | |
+|  _ <| | (__|   <   |  _ < (_) | | |  |_|   |_|   |_|
+|_| \_\_|\___|_|\_\  |_| \_\___/|_|_|  (_)   (_)   (_)
+
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxddooolcldkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkx:,',,,,,,,;lxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxl;'.'..''''';:dOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxxcc:::;;;;:;;,,:kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd;cdllodddxxxxdc,:kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl:lollodxddxxxxo;cOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxlol::ccodoodxxo;oOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdkOxllcccoxdllooloOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdo0ollllcdxxxxxxoOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo0dlllccooxxxxddOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOollccloddxxdxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxllllodxdddOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxllllloddddxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdlllcclloddxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxdllllodddddO;lkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxdxOOdodddooododOx'..;ldxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxdl;',;oOOklcccllldk0Ol.......';coxkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxoc;'.....'dkkOlcccddkOOOo..............,cdkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO:'..........loloc::cxOOOkc...................lOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO..............;cccclooddl'....................xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd..............;c;cclllll:.....................:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo..............:::ddccllc'......................kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl..............;ccxxcccc;.......................xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO;..............;cckkc:cc........................kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,..............,ccco;::;........................:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...............:c:::;:'..................  .....kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...............;c::,;;.........c:,,,'...  ......,xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'...............':::,,'........,::cloooc.. ........:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk.....  ..........;;:;,.........';:cooooo,... ........lOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo......  .........';;,'..........,::cloool.............;OOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd......  .. .......;:,'............;:loool'.............oOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd.............'',,';:,............   .,:ll,.............dOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk;....'';olc::cl,.;:,..........       .... ............oOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...,'';l:::::c:.,:'.....               .. .',........cOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOx,......:::::::'.':'...                     .........,xOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdc'...':::;;' .,:.           .;,          ,;;,'',cdOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkl...''..  .';.            ..         ,OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk.'.     .',                      ..;OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdc:..   ..',                ........'OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl'........,;.           .............kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'.........,;.          ..............cOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOx..'.......,;...         .............;OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl..........;;...        .;'...........'OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO;..........;;...        ...............OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk'..........;:..           .............kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd,.........;:c;..           ............xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+
+000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
+000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
+000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000OO00000000000000000000000000000000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000000000000OOOOO00000000000000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000OOOOkkxdOkoooxxxxxO00000000000000000000000000000O000000000000000000000000
+00000000000000000000000000000000000000000000000OOOkc:;;;:,'',,;,,;oO0000000000000000000000000000000000000000000000000000
+0000000000000000000000000000000000000000000OOOOkd:c.'.....'......'':O000000000000000000000000000000000000000000000000000
+000000000000000000000000000000000000000000Okxdc'.....''.............cO00000000000000000000000000000000000000000000000000
+000000000000000000000000000000000000000000Oo;l,.....................'oO0000000000000000000000000000000000000000000000000
+0000000000000000000000000000000000000000000Oo,........,:ccc:,'......';OO00000000000000000000000000000000000000000000O000
+00000000000000000000000000000000000000000000Okl,'.',;clooodo:;'....'''xO000000000000000000000000000000000000000000000000
+0000000000000000000000000000000000000000000000Ooc:::::clooodoc;,,,,,::xO000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000xcc::::cllloddddl;;:cclkO000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000Oc;;:;;;;;::cloddlldlcoOO000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000Ok:,,cc:;,;:clooooooloOO0000000000000000000000000000000000000000000000000
+0000000000000000000000000000000000000000000000000dc:cooc:;:clooooooodO00000000000000000000000000000000000000000000000000
+000000000000000000000000000000000000000000000000OOlllolc;::llooooooodO00000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000000Ol:::ccc::cloooooooO00000000000000000000000000000000000000000000000000
+00000000000000000000000000000000000000000000000000Ox;;;;;:ccclllooooolkOOO0000000000000000000000000000000000000000000000
+0000000000000000000000000000000000000000000000OOxl:...;;;:cllccll:oooooxkd;;cldxOO00000000000000000000000000000000000000
+00000000000000000000000000000000000000000OOOkdc'.......:cc;;;;:cl,::c:lokO'.......,cokOO00000000000000000000000000000000
+00000000000000000000000000000000000000OOkxl;'.......   .ldxl:::::,::::ldkk:............;oO000000000000000000000000000000
+0000000000000000000000000000000000OOOkoc,...........    ;ldxccl::,;::clkOk:..............lO00000000000000000000000000000
+00000000000000000000000000000000OOdl;'..............    .lol:okc:::;;:lkkd...............,O00000000000000000000000000000
+00000000000000000000000000000000Ol...................    ,cc;::;::ccoooxd,...............'O00000000000000000000000000000
+00000000000000000000000000000000O,.....................   'xl;;:c::loooc;,...............;O00000000000000000000000000000
+00000000000000000000000000000000O,..... ..................oc;;:;;clxxlc:;,'..............dO00000000000000000000000000000
+00000000000000000000000000000000O;..        .............'o;;;;::;:ccoc;;,'. ...........'O000000000000000000000000000000
+00000000000000000000000000000000Od;.         ...........;c:;;;;;:l:xxdl;;,'. ...........c0000000000000000000000000000000
+000000000000000000000000000000000O:..         ........::..';,,,:lc;;cc:;,,,.. ..........d0O00000000000000000000000000000
+0000000000000000000000000000000000c.........   .. ...,,.  .''';clc::cc;;;,,'. ..........kO000000000000000000000000000000
+0000000000000000000000000000000000l'.........   .   ...    .'..:ccccc:;;;;,,.  .........O0000000000000000000000000000000
+0000000000000000000000000000000000o,..........                 ,l:c:;;,,,,,'.. ........,O0000000000000000000000000000000
+0000000000000000000000000000000000x'.                          'c:c;,,,,,,''..  .......c00000000000000000000000000000000
+0000000000000000000000000000000000k,.                   ....  ..:cc;',,''.....   ......o00000000000000000000000000000000
+0000000000000000000000000000000000O'   .                .. .....;cc;,,'''''''.   ......d00000000000000000000000000000000
+0000000000000000000000000000000000O.                     .......'::;,'''''''.     .....k00000000000000000000000000000000
+0000000000000000000000000000000000x.                     ........,;;''','''..     ....'O00000000000000000000000000000000
+0000000000000000000000000000000000O.                      .......';,''''''..       ...cO00000000000000000000000000000000
+0000000000000000000000000000000000Ol                       .......,,'''''...       ...k000000000000000000000000000000000
+00000000000000000000000000000000000O,                       ......,,''''.... ..... ..:OO00000000000000000000000000000000
+000000000000000000000000000000000000O:                       .....,,''''... .....  ..x0000000000000000000000000000000000
+000000000000000000000000000000000000OOd.                      ....,,''''..   ..   ..:O0000000000000000000000000000000000
+0000000000000000000000000000000000000Oo,'.                     ...',.,...         ..k00000000000000000000000000000000000
+000000000000000000000000000000000000Ok;,.                       ..', ,.,.         .dOO0000000000000000000000000000000000
+000000000000000000000000000000000000O:,..                        .',,:;::;,.     .;O000000000000000000000000000000000000
+0000000000000000000000000000000000OOo'..                         .';ccccc:;'..   .o0000000000000000000000000000000000000
+0000000000000000000000000000000000Oo...                           ';clcc::;,..   .oO000000000000000000000000000000000000
+0000000000000000000000000000000000O,..                            ';lllccc;,.   ..cO000000000000000000000000000000000000
+
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxddooolcldkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkx:,',,,,,,,;lxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxl;'.'..''''';:dOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxxcc:::;;;;:;;,,:kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd;cdllodddxxxxdc,:kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl:lollodxddxxxxo;cOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxlol::ccodoodxxo;oOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdkOxllcccoxdllooloOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdo0ollllcdxxxxxxoOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo0dlllccooxxxxddOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOollccloddxxdxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxllllodxdddOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxllllloddddxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdlllcclloddxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxdllllodddddO;lkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxdxOOdodddooododOx'..;ldxOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkxdl;',;oOOklcccllldk0Ol.......';coxkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOxoc;'.....'dkkOlcccddkOOOo..............,cdkOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO:'..........loloc::cxOOOkc...................lOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO..............;cccclooddl'....................xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd..............;c;cclllll:.....................:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo..............:::ddccllc'......................kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl..............;ccxxcccc;.......................xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO;..............;cckkc:cc........................kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,..............,ccco;::;........................:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...............:c:::;:'..................  .....kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...............;c::,;;.........c:,,,'...  ......,xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'...............':::,,'........,::cloooc.. ........:OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk.....  ..........;;:;,.........';:cooooo,... ........lOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOo......  .........';;,'..........,::cloool.............;OOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd......  .. .......;:,'............;:loool'.............oOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd.............'',,';:,............   .,:ll,.............dOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk;....'';olc::cl,.;:,..........       .... ............oOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO,...,'';l:::::c:.,:'.....               .. .',........cOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOx,......:::::::'.':'...                     .........,xOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdc'...':::;;' .,:.           .;,          ,;;,'',cdOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOkl...''..  .';.            ..         ,OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk.'.     .',                      ..;OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOdc:..   ..',                ........'OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl'........,;.           .............kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'.........,;.          ..............cOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOx..'.......,;...         .............;OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOl..........;;...        .;'...........'OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO;..........;;...        ...............OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOk'..........;:..           .............kOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOd,.........;:c;..           ............xOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+-->
