feat: update day7 note

--- a/content/llt/105.md
+++ b/content/llt/105.md
@@ -22,7 +22,7 @@
 
 ```
 	// 插入排序
-    function insetSort(uint256[] memory arr)
+    function insertSort(uint256[] memory arr)
         public
         pure
         returns (uint256[] memory)
