--- a/whw2025.md
+++ b/whw2025.md
@@ -344,4 +344,178 @@ bytes memory array9 = new bytes(9);
 
 ###
 
+### 2024.09.27
+
+第七节映射类型 mapping（哈希表）
+
+
+1、在映射中，人们可以通过键（Key）来查询对应的值（Value）
+
+2、映射规则：
+1）映射的_KeyType只能选择Solidity内置的值类型，比如uint，address等，不能用自定义的结构体。而_ValueType可以使用自定义的类型。
+2）映射的存储位置必须是storage，因此可以用于合约的状态变量，函数中的storage变量和library函数的参数；
+3）为了保持映射数据的持久性和一致性，mapping 只能存储在合约的持久存储区，即 storage 中。
+4）如果映射声明为public，那么Solidity会自动给你创建一个getter函数，可以通过Key来查询对应的Value。自动生成的 getter 函数只提供查询功能，而不能修改映射中的数据。
+
+示例：
+contract MyContract {
+    mapping(address => uint256) public balances;
+}
+
+自动生成
+
+function balances(address _addr) public view returns (uint256) {
+    return balances[_addr];
+}
+
+
+5）给映射新增的键值对的语法为_Var[_Key] = _Value，其中_Var是映射变量名，_Key和_Value对应新增的键值对。
+6）映射中的每个键都是唯一的，不能重复。当给一个键赋值时，如果键已经存在，则新值会覆盖旧值。
+7）映射的值是可修改的，并且映射可以动态地增长（不需要提前定义映射的长度）。
+
+3、映射的原理​
+1）原理1: 映射不储存任何键（Key）的资讯，也没有length的资讯。
+2）原理2: 映射使用keccak256(abi.encodePacked(key, slot))当成offset存取value，其中slot是映射变量定义所在的插槽位置。
+3）原理3: 因为Ethereum会定义所有未使用的空间为0，所以未赋值（Value）的键（Key）初始值都是各个type的默认值，如uint的默认值是0。
+
+###
+
+### 2024.09.28
+
+第八节变量初始值
+
+声明但未赋值的变量的初始值（也叫默认值）
+
+1、值类型初始值
+
+1）bool 类型的默认值为 false
+2）字符串 (string)的默认值：""（空字符串）
+3）所有整型变量（包括有符号整数 int 和无符号整数 uint）的默认值都是 0。
+4）enum 类型的默认值是枚举中第一个定义的元素。这是因为 Solidity 默认将枚举类型映射为从 0 开始的整数，第一个枚举项的值为 0。如果一个枚举变量在声明时没有被赋值，它会自动取枚举中第一个元素的值，这个值在内部被表示为 0。
+
+示例：
+enum Color { Red, Green, Blue }  // 定义一个枚举类型
+Color myColor;                 // 声明一个未赋值的枚举变量，默认值为 Color.Red
+
+5）address 类型的默认值是 0x0000000000000000000000000000000000000000，也就是“零地址”或空地址。
+6）对于 internal 、external类型的函数，未初始化时其值为“空白函数”，意味着没有任何实现或指向。
+
+2、引用类型初始值​
+1）映射mapping: 所有元素都为其默认值的mapping
+
+对于 mapping 类型，所有键都默认映射到其值类型的默认值。也就是说，如果你通过某个键来查询映射，但从未对该键赋过值，它会返回值类型的默认值。
+
+示例：
+mapping(uint => address) 中，如果你查询某个 uint 键但未赋值，它会返回默认地址 0x0000000000000000000000000000000000000000。
+
+2）结构体struct: 所有成员设为其默认值的结构体
+结构体是由不同类型的数据组合成的复合数据类型。每个成员变量都有其各自的默认值。
+示例：
+struct Student {
+    uint age;
+    string name;
+}
+Student public student;  // 未初始化的结构体，age 默认为 0，name 默认为 ""
+
+3）数组array
+动态数组: [ ]
+静态数组（定长）: 所有成员设为其默认值的静态数组
+
+delete操作符：用于将某个变量的值重置为其默认值。
+
+第九节变量（需重点重学）
+
+1、constant（常量）和immutable（不变量）。状态变量声明这两个关键字之后，不能在初始化后更改数值。这样做的好处是提升合约的安全性并节省gas。
+2、只有数值变量可以声明constant和immutable；string和bytes可以声明为constant，但不能为immutable。
+3、constant变量必须在声明的时候初始化，之后再也不能改变。
+4、constant 变量通常用于那些值在合约执行过程中不会改变的场景。
+5、immutable 变量和 constant 变量，它们的值在合约部署时就必须被确定，并且之后不能修改；
+
+###
+
+### 2024.09.29
+
+第十节控制流
+
+1、if-else；示例：
+function ifElseTest(uint256 _number) public pure returns(bool){
+    if(_number == 0){
+        return(true);
+    }else{
+        return(false);
+    }
+}
+
+2、for循环
+function forLoopTest() public pure returns(uint256){
+    uint sum = 0;
+    for(uint i = 0; i < 10; i++){
+        sum += i;
+    }
+    return(sum);
+}
+
+3、while循环
+function whileTest() public pure returns(uint256){
+    uint sum = 0;
+    uint i = 0;
+    while(i < 10){
+        sum += i;
+        i++;
+    }
+    return(sum);
+}
+
+4、do-while循环
+function doWhileTest() public pure returns(uint256){
+    uint sum = 0;
+    uint i = 0;
+    do{
+        sum += i;
+        i++;
+    }while(i < 10);
+    return(sum);
+}
+
+5、三元运算符，常常被用作if语句的简写；规则：? 条件为真的表达式 : 条件为假的表达式；示例：
+// 三元运算符 ternary/conditional operator
+function ternaryTest(uint256 x, uint256 y) public pure returns(uint256){
+    // return the max of x and y
+    return x >= y ? x: y; 
+}
+
+6、continue（立即进入下一个循环）
+7、break（跳出当前循环）
+
+“插入排序”需重点重学
+
+第十一节构造函数和修饰器
+
+1、构造函数（constructor）
+
+1）是一种特殊的函数，每个智能合约只能定义一个构造函数，并且构造函数会在合约部署时自动执行一次；非常适合用于设置合约的初始状态，如定义合约的所有者。
+
+2）0.4.22之前，使用与合约名同名的函数作为构造函数；示例：
+
+pragma solidity =0.4.21;
+
+contract Parents {
+    // 与合约名Parents同名的函数就是构造函数
+    function Parents() public {
+        // 构造函数的逻辑
+    }
+}
+
+容易存在漏洞：比如将大写P写成了小写p，即将function Parents()写成了function parents()，那么function parents()就不是构造函数了而是普通函数了；
+
+3）0.4.22版本及之后采用了更为严格的构造函数写法，明确使用关键字constructor来定义构造函数。
+
+2、修饰器（modifier）
+
+1）是Solidity特有的语法，用于在函数执行前执行某些检查或附加操作，可以帮助减少代码重复，提高代码的可读性和简洁性。
+
+2）它的主要作用是在函数执行前进行某些预处理，例如地址验证、余额检查等。
+
+###
+
 <!-- Content_END -->
