--- a/cxk228922.md
+++ b/cxk228922.md
@@ -272,6 +272,53 @@ contract Child is Parent {
     }
 }
 ```
+### 2024.09.29
+1. Interface
+Define the interactions between contracts
+```solidity=
+interface Token {
+    function transfer(address recipient, uint256 amount) external returns (bool);
+}
+
+contract MyToken is Token {
+    mapping(address => uint256) public balances;
+
+    function transfer(address recipient, uint256 amount) external override returns (bool) {
+        require(balances[msg.sender] >= amount, "Insufficient balance");
+        balances[msg.sender] -= amount;
+        balances[recipient] += amount;
+        return true;
+    }
+}
+
+```
+1.1  IERC721
+
+- event-Transfer:
+```solidity!
+event Transfer(address indexed from, address indexed to, uint256 indexed tokenId);
+```
+when `tokenID` moved from `from` to another address `to`
+
+- event-ApprovalForAll:
+```solidity!
+event ApprovalForAll(address indexed owner, address indexed operator, bool approved);
+```
+The token holder authorizes/de-authorizes an `operator` to manage all its tokens.
+
+- function-balanceOf
+```solidity!
+function balanceOf(address owner) external view returns (uint256 balance);
+```
+return the number of tokens owned by `owner`
+
+- function-ownerOf
+```solidity!
+function ownerOf(uint256 tokenId) external view returns (address owner);
+```
+return the address of owner of `tokenID`
+
+and more....
 
     
     
