--- a/whw2025.md
+++ b/whw2025.md
@@ -432,4 +432,89 @@ delete操作符：用于将某个变量的值重置为其默认值。
 5、immutable 变量和 constant 变量，它们的值在合约部署时就必须被确定，并且之后不能修改；
 
 ###
+
+### 2024.09.29
+
+第十节控制流
+
+1、if-else；示例：
+function ifElseTest(uint256 _number) public pure returns(bool){
+    if(_number == 0){
+        return(true);
+    }else{
+        return(false);
+    }
+}
+
+2、for循环
+function forLoopTest() public pure returns(uint256){
+    uint sum = 0;
+    for(uint i = 0; i < 10; i++){
+        sum += i;
+    }
+    return(sum);
+}
+
+3、while循环
+function whileTest() public pure returns(uint256){
+    uint sum = 0;
+    uint i = 0;
+    while(i < 10){
+        sum += i;
+        i++;
+    }
+    return(sum);
+}
+
+4、do-while循环
+function doWhileTest() public pure returns(uint256){
+    uint sum = 0;
+    uint i = 0;
+    do{
+        sum += i;
+        i++;
+    }while(i < 10);
+    return(sum);
+}
+
+5、三元运算符，常常被用作if语句的简写；规则：? 条件为真的表达式 : 条件为假的表达式；示例：
+// 三元运算符 ternary/conditional operator
+function ternaryTest(uint256 x, uint256 y) public pure returns(uint256){
+    // return the max of x and y
+    return x >= y ? x: y; 
+}
+
+6、continue（立即进入下一个循环）
+7、break（跳出当前循环）
+
+“插入排序”需重点重学
+
+第十一节构造函数和修饰器
+
+1、构造函数（constructor）
+
+1）是一种特殊的函数，每个智能合约只能定义一个构造函数，并且构造函数会在合约部署时自动执行一次；非常适合用于设置合约的初始状态，如定义合约的所有者。
+
+2）0.4.22之前，使用与合约名同名的函数作为构造函数；示例：
+
+pragma solidity =0.4.21;
+
+contract Parents {
+    // 与合约名Parents同名的函数就是构造函数
+    function Parents() public {
+        // 构造函数的逻辑
+    }
+}
+
+容易存在漏洞：比如将大写P写成了小写p，即将function Parents()写成了function parents()，那么function parents()就不是构造函数了而是普通函数了；
+
+3）0.4.22版本及之后采用了更为严格的构造函数写法，明确使用关键字constructor来定义构造函数。
+
+2、修饰器（modifier）
+
+1）是Solidity特有的语法，用于在函数执行前执行某些检查或附加操作，可以帮助减少代码重复，提高代码的可读性和简洁性。
+
+它的主要作用是在函数执行前进行某些预处理，例如地址验证、余额检查等。
+
+### 
 <!-- Content_END -->
