--- a/content/Eric/113.md
+++ b/content/Eric/113.md
@@ -1,7 +1,18 @@
 ## Create2
 
-// TODO
-
+### Create2如何计算出地址
+* oxFF 固定数
+* 创建者的合约地址
+* 创建者指定的byte32类型的值
+* 新合约的creationCode（初始字节码）
+```
+新地址 = has("oxFF",创建者地址，salt,initCode);
+```
+### 如何使用
+```
+// 根Create用法基本一样，多了一个salt参数
+Contract x = new Contract{salt:_salt, value:_value}(params)
+```
 ## 删除合约
 
 ### 如何使用
