--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -43,5 +43,7 @@ timezone: Asia/Taipei
 ### 2024.09.29
 今天的學習內容主要是在delegate call上面，delegatecall是讓呼叫合約可以在自己的上下文執行被呼叫合約的函數，那有個問題是，這樣呼叫合約不就要有跟被呼叫合約一樣的狀態變量以及名稱，事實上delegatecall的用法中他辨認的是slot的位置，例如你在被呼叫合約裡面作用的是slot1，他就會作用在呼叫合約裡面的slot1，這意味的如果呼叫合約的slot沒有跟被呼叫合約的slot對齊就可能會發生嚴重的錯誤
 
+### 2024.09.30
+昨天的補充 不是所有狀態變數都會存在slot裡面，immutable還有constant都不會存在slot內而是直接內嵌在合約的byte code裡面,對於其他動態的結構例如陣列要計算array[n] slot的位置要把起始slot作encode在hash然後加上offset(n*element size假如元素是uint256 element size可以當作1因為每個slot只能存一個元素),mapping的算法可以直接調用keccak256(encodewithpacked(a,b)),a放的是key value,b放的是起始的slot
 <!-- Content_END -->
 
