feat: update day8 note

--- a/content/llt/106.md
+++ b/content/llt/106.md
@@ -13,7 +13,13 @@ owner = initialOwner; // 在部署合约的时候，将owner设置为传入的in
 
 # 修饰器
 
-修饰器（`modifier`）主要使用场景是运行函数前的检查，例如地址，变量，余额等。
+修饰器（`modifier`）主要使用场景是运行函数前的检查，例如地址，变量，余额等。增强代码的可重用性和安全性
+
+关键点：
+
+- 类似于其他语言的装饰器
+- 主要用于函数执行前条件检查
+- 使用`_`符号表示被修饰函数的执行点
 
 ```
 // 定义modifier
