--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -45,5 +45,22 @@ timezone: Asia/Taipei
 
 ### 2024.09.30
 昨天的補充 不是所有狀態變數都會存在slot裡面，immutable還有constant都不會存在slot內而是直接內嵌在合約的byte code裡面,對於其他動態的結構例如陣列要計算array[n] slot的位置要把起始slot作encode在hash然後加上offset(n*element size假如元素是uint256 element size可以當作1因為每個slot只能存一個元素),mapping的算法可以直接調用keccak256(encodewithpacked(a,b)),a放的是key value,b放的是起始的slot
+
+今天看了solidity 101關於編碼的部分，包括abi.encodePacked,abi.encode , abi.encodeWithSignature , abi.encodeWithＳelector，encode 跟 encodewithpacked的差別在於encode會把個別資料填充到32個零，而encodeWithPacked會把他們緊湊的包再一起不會填充0，而encodewithsignature相當於是結合了encodeWithselector的功能你不需要自己把它轉成function selector他會自動幫你處理，encodewithselector在根本上也是由encodePacked來達成，他只是把前面得到的四個byte function selector跟後面要傳入的參數經過abi.encode後在concatenate再一起
+```solidity=
+function my_encodeWithSelector() public view returns(bytes memory result) {
+    result = bytes.concat(
+        bytes4(keccak256("foo(uint256,address,string,uint256[2])")), // 加入函數選擇器
+        abi.encode(x, addr, name, array) // 使用標準 ABI 編碼
+    );
+function encodeWithSignature() public view returns(bytes memory result) {
+        result = abi.encodeWithSignature("foo(uint256,address,string,uint256[2])", x, addr, name, array);
+    }
+
+    function encodeWithSelector() public view returns(bytes memory result) {
+        result = abi.encodeWithSelector(bytes4(keccak256("foo(uint256,address,string,uint256[2])")), x, addr, name, array);
+    }
+```
+以上三個function的輸出是一樣的
 <!-- Content_END -->
 
