--- a/cxk228922.md
+++ b/cxk228922.md
@@ -319,7 +319,44 @@ function ownerOf(uint256 tokenId) external view returns (address owner);
 return the address of owner of `tokenID`
 
 and more....
+### 2024.09.30
 
+1. Error Handling
+- `require`
+Used to check if a condition is true<br>
+If false,contract will be terminated
+```solidity=
+function withdraw(uint amount) public {
+    require(amount <= balance, "Insufficient balance");
+    balance -= amount;
+    payable(msg.sender).transfer(amount);
+}
+```
+        
+- `assert`
+Used to check if a condition **always** be true
+```solidity=
+function decrement() public {
+    assert(counter > 0);
+    counter -= 1;
+}
+```
+
+- `error`
+Custom error
+```solidity=
+error InsufficientBalance(uint requested, uint available);
+
+function withdraw(uint amount) public {
+    if (amount > balance)
+        revert InsufficientBalance({
+            requested: amount,
+            available: balance
+        });
+    balance -= amount;
+    payable(msg.sender).transfer(amount);
+}
+```
     
     
 
