--- a/whw2025.md
+++ b/whw2025.md
@@ -518,4 +518,75 @@ contract Parents {
 
 ###
 
+### 2024.09.30
+
+第十二节事件
+
+1、事件（event）的概念
+
+在Solidity中，事件是EVM（以太坊虚拟机）上的日志抽象，它允许智能合约与外部世界进行通信，通常用于记录重要的链上活动。
+
+2、事件的两个主要特点：
+
+1）响应：
+应用程序（如使用ethers.js等库）可以通过RPC接口订阅并监听这些事件，一旦事件被触发，前端可以做出相应的响应操作。这样可以实现链上与链下的互动。
+2）经济性：
+事件是一种比存储数据更为经济的方式，记录一个事件大约消耗2000 gas。相比之下，链上存储一个新变量至少需要20000 gas。因此，事件通常被用作记录链上活动的方式，而不依赖于状态变量的存储。
+
+3、声明事件
+
+事件的声明由event关键字开始，接着是事件的名称，括号中是事件需要记录的变量类型和变量名；
+
+示例：
+event Transfer(address indexed from, address indexed to, uint256 value);
+
+1）event：这是声明事件的关键字
+2）ERC20标准中，Transfer事件用于记录代币的转移。
+3）address indexed from：记录发送代币的地址，indexed关键字表示这个参数会被索引，便于在日志中快速检索。
+4）address indexed to：记录接收代币的地址，indexed同样用于索引。
+5）uint256 value：记录转移的代币数量，这个参数没有被indexed，因此不会被索引。
+
+关键字indexed
+
+1）索引功能：事件中的indexed关键字允许最多三个参数被索引，这意味着这些参数将会被储存在日志的topics中。
+2）非索引参数：事件中的非索引参数会被存储在日志的data部分，尽管不会被索引，但仍然可以通过读取完整的日志内容来访问这些数据。
+3）只有特定的数据类型才能被索引；可以被索引的类型包括：
+address
+uint、int 等整型
+bool
+合约类型
+枚举类型
+4）动态大小的数组、字符串（string）和结构体是不能被索引的，因为这些类型的大小不固定，无法通过topics来有效索引和存储。
+5）
+
+4、释放事件
+
+事件释放就是触发一个事件的意思。它通过emit关键字实现，表示在智能合约的执行过程中，记录某些重要的信息，并通知链外的应用程序（例如区块链浏览器、前端应用）发生了某个特定的操作或变化。
+
+emit关键字：在Solidity中，emit用于触发事件。
+
+
+5、+= 和 -= 是编程中的复合运算符，它们是更简洁的表达方式，用于更新变量的值。
++= 运算符：
+表示增加并赋值。
+语法：a += b 等同于 a = a + b。
+作用：它将 b 的值加到 a 上，然后把结果赋值给 a。
+
+-= 运算符：
+表示减少并赋值。
+语法：a -= b 等同于 a = a - b。
+作用：它将 b 的值从 a 中减去，然后把结果赋值给 a
+
+6、EVM日志 Log​
+
+以太坊虚拟机（EVM）用日志Log来存储Solidity事件，每条日志记录都包含主题topics和数据data两部分。data 部分的变量在存储上消耗的gas相比于 topics 更少。
+
+1）主题 topics​
+日志的第一部分是主题数组，用于描述事件，长度不能超过4。它的第一个元素是事件的签名（哈希）。对于上面的Transfer事件，它的事件哈希就是：
+
+2）数据 data​
+事件中不带 indexed的参数会被存储在 data 部分中，可以理解为事件的“值”。data 部分的变量不能被直接检索，但可以存储任意大小的数据。
+
+###
+
 <!-- Content_END -->
