--- a/content/Eric/116.md
+++ b/content/Eric/116.md
@@ -35,3 +35,6 @@ function approveTransfer(address from, address to, uint256 amount) external view
 ## 代币水龙头
 ### 需求
 我们将一些代币存放到水龙头合约里，用户可以通过这个合约领取代币，每个地址只允许领取一次
+
+### 代码
+[Faucet代码实现](Faucet/Faucet.sol)
