--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -62,5 +62,12 @@ function encodeWithSignature() public view returns(bytes memory result) {
     }
 ```
 以上三個function的輸出是一樣的
+
+### 2024.10.01
+記錄一下遇到的問題
+```solidity=
+keccak256((keccak256(abi.encode(leaf, proof[1]))));
+```
+原本想說這樣可以成功編譯結果一直有問題看了一下發現keccak256要傳入的是bytes可是返回的是固定只有32字節的bytes32,要解決這個問題可以加上一個bytes.concat它會自動幫你轉成bytes型別
 <!-- Content_END -->
 
