--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -69,5 +69,7 @@ function encodeWithSignature() public view returns(bytes memory result) {
 keccak256((keccak256(abi.encode(leaf, proof[1]))));
 ```
 原本想說這樣可以成功編譯結果一直有問題看了一下發現keccak256要傳入的是bytes可是返回的是固定只有32字節的bytes32,要解決這個問題可以加上一個bytes.concat它會自動幫你轉成bytes型別
+
+寫作業狠狠踩了一個坑 用kecca256跟encodewithpacked來算merkel tree想說怎麼一直跟答案不一樣是不是他有問題，後來才發現在encodepack的時候順序沒有注意，要按照在樹裡面的結構來做才會跟答案一樣
 <!-- Content_END -->
 
