--- a/whw2025.md
+++ b/whw2025.md
@@ -589,4 +589,52 @@ emit关键字：在Solidity中，emit用于触发事件。
 
 ###
 
+### 2024.10.01
+
+
+第十三节继承
+1、继承的主要作用是：复用代码。
+1）virtual：父合约中的函数必须用 virtual 标记，子合约才能重写它。
+2）override：子合约中如果要重写父合约的函数或状态变量的 getter，必须用 override 标记。
+3）注意：用override修饰public变量，会重写与变量同名的getter函数，
+
+2、多重继承​
+1）Solidity的合约可以继承多个合约。规则：
+2）继承时要按辈分最高到最低的顺序排。比如我们写一个Erzi合约，继承Yeye合约和Baba合约，那么就要写成contract Erzi is Yeye, Baba，而不能写成contract Erzi is Baba, Yeye，不然就会报错。
+3）如果某一个函数在多个继承的合约里都存在，比如例子中的hip()和pop()，在子合约里必须重写，不然会报错。
+4）重写在多个父合约中都重名的函数时，override关键字后面要加上所有父合约名字，例如override(Yeye, Baba)
+
+3、修饰器的继承​
+Solidity中的修饰器（Modifier）同样可以继承，用法与函数继承类似，在相应的地方加virtual和override关键字即可。
+
+4、构造函数的继承
+子合约可以通过两种方式继承父合约的构造函数。
+1）在继承时直接传递参数；
+2）在子合约构造函数中调用父合约的构造函数：可以在子合约构造函数内调用父合约的构造函数，并传递经过计算的参数。
+
+5、调用父合约的函数
+1）子合约可以通过父合约名.函数名() 的方式直接调用父合约中的函数。这种调用方式是显式地指定了某个父合约中的特定函数。这种方式特别适合在多重继承的情况下，开发者明确想调用某个特定的父合约函数时使用。
+2）子合约可以使用 super.函数名() 来调用父合约的函数。super 关键字用于在继承链中调用离子合约最近的父合约函数，特别适合处理多重继承时的函数调用。
+
+6、钻石继承
+又称为菱形继承，这种继承结构发生在一个合约同时从多个合约继承时，这些父合约又继承自同一个合约。这种继承关系会形成一个菱形结构，即所谓的钻石继承。
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.13;
+
+/* 继承树：
+  God
+/      \
+Adam Eve
+\      /
+ people
+*/
+
+钻石继承的行为：
+
+1）super 关键字：在多重继承链中，super 关键字会按照继承声明的顺序依次调用链条上的每个合约的函数，而不仅仅是调用最近的父合约。
+
+2）继承顺序：在 people 合约中，foo() 和 bar() 都会先调用 Eve 的 foo() 和 bar()，然后 Eve 又会通过 super 调用 Adam 的实现，最后 Adam 会调用 God 中的实现。这就是钻石继承中 super 的工作方式，它沿着继承链条逐层向上调用父合约的函数。
+
+### 
+
 <!-- Content_END -->
