--- a/content/0xRory/108.md
+++ b/content/0xRory/108.md
@@ -137,3 +137,12 @@ function getString2(uint256 _number) public pure returns(string memory){
     return Strings.toHexString(_number);
 }
 ```
+這幾個 library很好用
+- Strings：將uint256轉換為String
+- Address：判斷某個地址是否為合約地址
+- Create2：更安全的使用Create2 EVM opcode
+- Arrays：跟數組相關的庫合約
+
+### 18. Import
+
+`import` 導入文件基本上和 javascript 的引入一樣，也可以直接使用 github的部分
