--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -71,5 +71,8 @@ keccak256((keccak256(abi.encode(leaf, proof[1]))));
 原本想說這樣可以成功編譯結果一直有問題看了一下發現keccak256要傳入的是bytes可是返回的是固定只有32字節的bytes32,要解決這個問題可以加上一個bytes.concat它會自動幫你轉成bytes型別
 
 寫作業狠狠踩了一個坑 用kecca256跟encodewithpacked來算merkel tree想說怎麼一直跟答案不一樣是不是他有問題，後來才發現在encodepack的時候順序沒有注意，要按照在樹裡面的結構來做才會跟答案一樣
+
+### 2024.10.02
+複習了一下interface相關的用法，在我們知道一個合約的地址後我們沒有辦法直接在solidity裡面調用他的函數，我們要先聲明他的interface然後把地址做type casting之後就可以進行調用，假如是一些比較通用的的ERC模板可以繼承openzeppline的函數庫
 <!-- Content_END -->
 
