--- a/cxk228922.md
+++ b/cxk228922.md
@@ -357,7 +357,30 @@ function withdraw(uint amount) public {
     payable(msg.sender).transfer(amount);
 }
 ```
-    
+### 2024.10.02
+#### overloading
+You can define 2 or more same-name function (except `modifier`)<br>
+but need to be different input type
+```solidity=
+function saySomething() public pure returns(string memory){
+    return("Nothing");
+}
+
+function saySomething(string memory something) public pure returns(string memory){
+    return(something);
+}
+```
+#### Argument Matching
+```solidity=
+function f(uint8 _in) public pure returns (uint8 out) {
+    out = _in;
+}
+
+function f(uint256 _in) public pure returns (uint256 out) {
+    out = _in;
+}
+```
+if we call `f(123)`,it can be `uint8` and`uint256`,the compiler will report error
     
 
 ### 
