--- a/content/Haoder/md/113.md
+++ b/content/Haoder/md/113.md
@@ -1,9 +1,9 @@
-# WTF Solidity 極簡入門：topic
+# WTF Solidity 極簡入門：繼承
 
 ## 重點內容
 
 > [!NOTE]
-> 本篇主旨
+> 介绍Solidity中的继承（inheritance），包括简单继承，多重继承，以及修饰器（Modifier）和构造函数（Constructor）的继承。
 
 ## 隨筆
 
