--- a/content/Eric/117.md
+++ b/content/Eric/117.md
@@ -32,7 +32,46 @@ function ApprvoceForAll(address indexed owner ,address indexed spender, bool app
 #### IERC721函数
 ```
 // 根据地址的代币数量
-function balanceOf(address _adderss) external returns(uint256);
+function balanceOf(address _adderss) external view returns (uint256);
 
+// 根据NFT代币查询拥有者
+function ownerOf(uint256 tokenId) external view returns (address);
 
+// 根据NFT代币查询被授权给了哪个地址
+function getApproved(uint256 tokenId) external view returns (address);
+
+// 转移nft
+function transferFrom(address from ,address to, uint256 tokenId) external view returns (bool);
+
+//安全转移nft (如果接收方是合约地址，被要求实现ERC721Receiver接口)
+function safeTransferFrom(address from, address to, uint256 tokenId) external view returns(bool);
+
+```
+[IERC721代码实现](ERC721/IERC721.sol)
+[ERC721代码实现](ERC721/ERC721.sol)
+
+#### IERC721Receiver
+如果一个合约没有实现ERC721的相关函数，转入的NFT就进了黑洞，为了防止误转账，ERC721实现了safeTransferFrom()安全转账函数，目标合约必须实现了IERC721Receiver接口才能接收ERC721代币，不然会revert
+
+```
+// ERC721接收者接口：合约必须实现这个接口来通过安全转账接收ERC721
+interface IERC721Receiver {
+    function onERC721Received(
+        address operator,
+        address from,
+        uint tokenId,
+        bytes calldata data
+    ) external returns (bytes4);
+}
+```
+
+#### IERC721Metadata
+```
+interface IERC721Metadata is IERC721 {
+    function name() external view returns (string memory);
+
+    function symbol() external view returns (string memory);
+    // 通过tokenId查询metadata的链接url，ERC721特有的函数
+    function tokenURI(uint256 tokenId) external view returns (string memory);
+}
 ```
