--- a/cxk228922.md
+++ b/cxk228922.md
@@ -381,8 +381,54 @@ function f(uint256 _in) public pure returns (uint256 out) {
 }
 ```
 if we call `f(123)`,it can be `uint8` and`uint256`,the compiler will report error
-    
 
-### 
+
+### 2024.10.03
+#### Library
+Like "Header file" in C++ , a function collection
+e.g. `Strings`
+```solidity=
+using Strings for uint256;
+function getString1(uint256 _number) public pure returns(string memory){
+    return _number.toHexString();
+}
+```
+or
+```solidity=
+function getString2(uint256 _number) public pure returns(string memory){
+    return Strings.toHexString(_number);
+}
+```
+tips...
+- Non-storable state variable
+- Unable to receive ETH
+- Can't be destroyed
+
+#### Import
+If we have...
+```
+Dir
+├── Import.sol
+└── Yeye.sol
+```
+We can use `import` to include contracts/library... in external file
+```solidity!
+import './Yeye.sol';
+```
+other option:
+```solidity!
+//only a part that needed 
+import { ContractName1, ContractName2 } from "path/to/file.sol";
+
+//as to rename
+import { ContractName as Alias } from "path/to/file.sol";
+
+//package manager
+import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+
+//URL
+import "https://github.com/username/repo/blob/main/Contract.sol";
+```
+
 
 <!-- Content_END -->
