--- a/0x3f3f3f3f3f3f.md
+++ b/0x3f3f3f3f3f3f.md
@@ -74,5 +74,8 @@ keccak256((keccak256(abi.encode(leaf, proof[1]))));
 
 ### 2024.10.02
 複習了一下interface相關的用法，在我們知道一個合約的地址後我們沒有辦法直接在solidity裡面調用他的函數，我們要先聲明他的interface然後把地址做type casting之後就可以進行調用，假如是一些比較通用的的ERC模板可以繼承openzeppline的函數庫
+
+### 2024.10.03
+今天複習了一下ERC20，包括transfer transferfrom approve等等，比較關鍵的大概是approve函數可以授權給其他地址使用指定數量你的帳戶持有的代幣，approve 加上 transferfrom讓合約可能出現風險所以需要多注意
 <!-- Content_END -->
 
