--- a/whw2025.md
+++ b/whw2025.md
@@ -816,4 +816,95 @@ function saySomething(string memory something) public pure returns(string memory
 
 ###
 
+### 2024.10.04
+
+第十八节import语句
+
+帮助我们在一个文件中引用另一个文件的内容，提高代码的可重用性和组织性。
+
+1、通过相对路径导入
+1）相对路径基于当前合约文件的位置，通常适合在同一项目中管理多个 Solidity 文件时使用。Import.sol 和 被导入文件 在同一文件夹中。
+2）./ 代表当前目录，../ 代表上一级目录。如果文件在其他文件夹中，可以用类似 import './folderName/Yeye.sol'; 这种路径形式。
+2、通过网络路径导入，网络资源必须可访问并且文件路径完整。
+这种方式常用于引用公开的库，比如 OpenZeppelin 提供的标准合约。通常，你可以通过 GitHub 等源代码托管平台上的链接直接引入 Solidity 文件。
+3、通过 NPM 目录导入
+在使用 NPM 导入时，你需要确保相关依赖已经安装在项目中，并且正确配置了 node_modules 路径。
+4、通过全局符号导入合约特定的全局符号
+5、所有的 import 语句必须放在代码的开头，即在**pragma 版本声明之后**，而在其他代码之前。
+
+示例：
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+// 导入 OpenZeppelin 库中的 Ownable 合约
+import '@openzeppelin/contracts/access/Ownable.sol';
+// 导入 Yeye.sol 文件中的 Yeye 合约
+import { Yeye } from './Yeye.sol';
+
+// 合约定义
+contract MyContract is Ownable {
+    Yeye public yeye;
+
+    constructor() {
+        yeye = new Yeye();
+    }
+}
+
+第十九节接收ETH receive和fallback
+两种特殊的回调函数：receive()和fallback()，主要在两种情况下被使用：
+1）接收ETH；
+2）处理合约中不存在的函数调用（代理合约proxy contract）
+
+说明：
+在Solidity 0.6.x版本之前，语法上只有 fallback() 函数，用来接收用户发送的ETH时调用以及在被调用函数签名没有匹配到时，来调用。
+0.6版本之后，Solidity才将 fallback() 函数拆分成 receive() 和 fallback() 两个函数。
+
+1、receive()函数：是在合约收到ETH转账时被调用的函数。
+1）一个合约最多有一个receive()函数，声明方式与一般函数不一样，不需要function关键字：receive() external payable { ... }。
+2）receive()函数不能有任何的参数，不能返回任何值，必须包含external和payable。
+3）当合约接收ETH的时候，receive()会被触发。
+4）receive()最好不要执行太多的逻辑。
+
+问题1：如何算太多的逻辑、逻辑复杂？
+
+GPT答：
+
+常见的复杂逻辑可能包括以下几种情况：
+
+1）修改存储变量：
+存储操作（例如写入合约的状态变量）非常消耗 gas。如果你在 receive() 函数中修改了多个状态变量，可能会耗尽 2300 gas。例如：
+receive() external payable {
+    // 修改状态变量非常耗费gas
+    balanceOf[msg.sender] += msg.value; // 修改存储变量 balanceOf
+}
+
+2）调用其他合约：
+调用另一个合约的函数，尤其是需要传递参数或等待返回结果的操作，通常需要更多的 gas。例如：
+receive() external payable {
+    // 调用其他合约的函数消耗大量gas
+    otherContract.someFunction(msg.sender, msg.value);
+}
+
+3）复杂的循环操作：
+如果 receive() 中有循环结构，并且处理的数据量较大，这会导致 gas 迅速耗尽。例如：
+
+receive() external payable {
+    for (uint i = 0; i < 1000; i++) {
+        // 复杂的循环会耗费大量gas
+        doSomething();
+    }
+}
+
+所以一定注意：
+有些恶意合约，会在receive() 函数（老版本的话，就是 fallback() 函数）嵌入恶意消耗gas的内容或者使得执行故意失败的代码，导致一些包含退款和转账逻辑的合约不能正常工作，因此写包含退款等逻辑的合约时候，一定要注意这种情况。
+
+2、回退函数 fallback
+1）fallback()函数会在调用合约不存在的函数时被触发。
+2）可用于接收ETH，也可以用于代理合约proxy contract。
+3）fallback()声明时不需要function关键字，必须由external修饰，一般也会用payable修饰，用于接收ETH:fallback() external payable { ... }。
+
+3、合约接收ETH时，msg.data为空且存在receive()时，会触发receive()；msg.data不为空或不存在receive()时，会触发fallback()，此时fallback()必须为payable。
+
+### 
+
 <!-- Content_END -->
