--- a/content/jackchou/102.md
+++ b/content/jackchou/102.md
@@ -13,3 +13,21 @@ function saySomething(string memory something) public pure returns(string memory
     return(something);
 }
 ```
+17
+这一讲，我们用ERC721的引用的库合约Strings为例介绍Solidity中的库合约（Library），并总结了常用的库合约。
+
+库合约
+库合约是一种特殊的合约，为了提升Solidity代码的复用性和减少gas而存在。库合约是一系列的函数合集，由大神或者项目方创作，咱们站在巨人的肩膀上，会用就行了。
+18
+在Solidity中，import语句可以帮助我们在一个文件中引用另一个文件的内容，提高代码的可重用性和组织性。本教程将向你介绍如何在Solidity中使用import语句。
+
+import用法
+通过源文件相对位置导入，例子：
+````
+文件结构
+├── Import.sol
+└── Yeye.sol
+
+// 通过文件相对位置import
+import './Yeye.sol';
+```
