--- a/cxk228922.md
+++ b/cxk228922.md
@@ -429,6 +429,20 @@ import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 //URL
 import "https://github.com/username/repo/blob/main/Contract.sol";
 ```
+### 2024.10.04
+#### receive ETH
+```solidity=
+event Received(address Sender, uint Value);
+receive() external payable {
+    emit Received(msg.sender, msg.value);
+}
+```
+- can't have any parameters
+- can't return anything
+- need to be `external` and `payable`
 
+#### fallback
+- If the contract only has `receive` && transaction doesn't have calldata -> receive()
+- If the contract has `fallback` && (transaction has calldata || no corresponding function) -> fallback()
 
 <!-- Content_END -->
